<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="#ffcc00"
    tools:context=".Activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            style="@style/textFont"
            android:text="@string/proje"
            android:textAlignment="center"
            android:textSize="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:height="30dp"
            style="@style/textFont"
            android:text="@string/versiyon" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="100dp">

            <EditText
                style="@style/textFont"
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/oval_white"
                android:hint="@string/kullaniciadi"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:singleLine="true" />

            <Button
                style="@style/textFont"
                android:id="@+id/btn_username"
                android:layout_width="25dp"
                android:layout_height="24dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/custom_icon_username" />

        </FrameLayout>

        //Password

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/oval_white"
                style="@style/textFont"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Switch
                style="@style/textFont"
                android:id="@+id/remember"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:text="@string/hatirla"
                android:textColor="#ffff" />

            <Button
                style="@style/textFont"
                android:id="@+id/btn_login"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="25dp"
                android:layout_weight="0.6"
                android:background="@drawable/oval"
                android:text="@string/giris"
                android:textColor="#ffff" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>